--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,11 @@ build:
   tools:
     python: "3.6"
 
+python:
+  install:
+    - method: pip
+      path: .
+
 sphinx:
   configuration: docs/source/conf.py
 
